# hn

./: Dockerfile
.github/workflows/: ci.yml
app/: main.py
app/core/: config.py
app/models/: score.py
app/routers/: score.py
hn/: Dockerfile  pyproject.toml
hn/app/core/: __init__.py
hn/app/models/: score.py
hn/app/services/: get_job_predict.py
